[package]
name = "axvcpu"
authors = [ "aarkegz <aarkegz@gmail.com>" ]
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: use main repo "https://github.com/arceos-org/arceos.git" instead
# axerrno = { path = "../arceos-vmm/crates/axerrno" }
# memory_addr = { path = "../arceos-vmm/crates/memory_addr" }
# percpu = { path = "../arceos-vmm/crates/percpu" }

axerrno = { git = "https://github.com/915604903T/arceos.git", branch = "vmm" }
memory_addr = { git = "https://github.com/915604903T/arceos.git", branch = "vmm" }
percpu = { git = "https://github.com/915604903T/arceos.git", branch = "vmm" }
